<resources>
    <string name="app_name">Bamboo</string>
    <string name="title_home">Home</string>
    <string name="title_sections">Sections</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_main_activity">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="bolimlar">Bo\'limlar:</string>
    <string name="hammasi">Hammasi</string>
    <string name="korilgan">Ko\'rilgan:</string>

    <string name="preference_key">com.example.marketapp.PREFERENCE_FILE_KEY</string>
    <string name="comment_qoldiring">Comment qoldiring</string>
    <string name="dastur_haqida">Dastur haqida</string>
    <string name="language">Tilni o\'zgartirish</string>
    <string name="qo_shimcha">Qo\'shimcha</string>
    <string name="asosiy">Asosiy</string>
    <string name="dasturchi_bilan_aloqa">Dasturchi bilan aloqa</string>
    <string name="profile">Profile</string>
    <string name="profilni_tahrirlash">Profilni tahrirlash</string>
    <string name="ilovani_baholash">Ilovani baholash</string>
    <string name="about_app">Bizning ilovamizdan foydalanganingiz uchun raxmat. Bu ilova mijozlarimizga yanada qulaylik yaratish maqsadida bizning do\'konimizga kelmasdan turib bizning mahsulotlarimiz haqida to\'la malumot olishingiz mumkin. \n\n     Dastur versiyasi: 1.0.0</string>
    <string name="ok">OK</string>
    <string name="email">anvarjonovbob1999@mail.ru</string>
    <string name="tel_1">+998994012741</string>
    <string name="tel_2" translatable="false">+998941017707</string>
    <string name="tel_3" translatable="false">+998934127708</string>
    <string name="mahsulotni_ko_rish">Mahsulotni ko\'rish</string>
    <string name="yangi">Yangi</string>
    <string name="arzonroq">Arzonroq</string>
    <string name="qimmatroq">Qimmatroq</string>
    <string name="ko_p_ko_rilgan">Ko\'p ko\'rilgan</string>
    <string name="so_m">so\'m</string>
    <string name="ismingiz">Ismingiz</string>
    <string name="familiyangiz">Familiyangiz</string>
    <string name="saqlash">Saqlash</string>
    <string name="image">Image</string>
    <string name="o_zbek_tili">O\'zbek tili</string>
    <string name="rus_tili">Rus tili</string>
    <string name="tilni_tanlang">Tilni tanlang</string>
    <string name="permission">Telefon qilish uchun ruxsat berishingiz kerak</string>
    <string name="news" translatable="false">news</string>
    <string name="telegram" translatable="false">telegram</string>
    <string name="share" translatable="false">share</string>
    <string name="onBackPress">Chiqish uchun yana bir marta bosing</string>
    <string name="buyurtma_bering">Buyurtma bering</string>

</resources>