<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        app:cnb_iconColor="@color/colorPrimary"
        app:cnb_textColor="@color/colorPrimary"/>

    <item
        android:id="@+id/sectionsFragment"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_sections"
        app:cnb_iconColor="@color/colorPrimary"
        app:cnb_textColor="@color/colorPrimary"/>

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_setting"
        android:title="@string/title_settings"
        app:cnb_iconColor="@color/colorPrimary"
        app:cnb_textColor="@color/colorPrimary" />

</menu>