<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".splashUi.registration.RegistrationFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_reg_avatar"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="10000dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_person"
            android:contentDescription="@string/image" />

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/et_reg_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/ismingiz"
        app:layout_constraintTop_toBottomOf="@id/cv_reg_avatar" />

    <EditText
        android:id="@+id/et_reg_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/familiyangiz"
        app:layout_constraintTop_toBottomOf="@id/et_reg_name" />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_reg"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        android:text="@string/saqlash"
        android:background="@drawable/bg_button"
        android:textColor="@color/white"
        android:textSize="16sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>