<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_layout_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@null"
    android:padding="20dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_layout_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/tv_fab_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog_title"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center"
            android:padding="4dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/buyurtma_bering" />
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_fab_tel_1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_fab_title">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/tel_2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_phone" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_fab_tel_2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_fab_tel_1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/tel_3" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_phone" />

    </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_fab"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/bg_dialog"
        android:text="@string/ok"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/cl_layout_dialog"
        app:layout_constraintTop_toBottomOf="@id/cl_layout_dialog" />



</androidx.constraintlayout.widget.ConstraintLayout>