<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/pageBackgroundColor">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="1000dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_person"
            android:contentDescription="@string/image" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="Abdulla G'afurov"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_avatar" />


    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/profile"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_profile_name" />


    <LinearLayout
        android:id="@+id/ll_profile_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_profile">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:padding="16dp"
            android:soundEffectsEnabled="true"
            android:text="@string/profilni_tahrirlash"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="16dp"
            android:layout_weight="0.1"
            android:src="@drawable/ic_right_arrow"
            android:contentDescription="@string/image" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_asosiy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/asosiy"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_profile_edit" />


    <LinearLayout
        android:id="@+id/ll_asosiy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_asosiy">

<!--        <LinearLayout-->
<!--            android:id="@+id/ll_tillar"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="9"-->
<!--                android:padding="16dp"-->
<!--                android:soundEffectsEnabled="true"-->
<!--                android:text="@string/language"-->
<!--                android:textSize="14sp" />-->

<!--            <ImageView-->
<!--                android:layout_width="24dp"-->
<!--                android:layout_height="24dp"-->
<!--                android:layout_gravity="center_vertical|end"-->
<!--                android:layout_marginEnd="16dp"-->
<!--                android:layout_weight="1"-->
<!--                android:src="@drawable/ic_right_arrow"-->
<!--                android:contentDescription="@string/image" />-->
<!--        </LinearLayout>-->

        <LinearLayout
            android:id="@+id/ll_dastur_haqida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:padding="16dp"
                android:soundEffectsEnabled="true"
                android:text="@string/dastur_haqida"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:src="@drawable/ic_right_arrow"
                android:contentDescription="@string/image" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_baholash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:padding="16dp"
                android:soundEffectsEnabled="true"
                android:text="@string/ilovani_baholash"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:src="@drawable/ic_right_arrow"
                android:contentDescription="@string/image" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_aloqa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:padding="16dp"
                android:soundEffectsEnabled="true"
                android:text="@string/dasturchi_bilan_aloqa"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:src="@drawable/ic_right_arrow"
                android:contentDescription="@string/image" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>